# lib_detect_testenv

./: .gitignore  CHANGELOG.md  CHANGES.rst  CLAUDE.md  README.md  README.rst  concept.md  pyproject.toml  reset_git_history.sh  setup.py
.docs/: README_template.rst  badges.rst  tested_under.rst
.github/workflows/: ci.yml  python-package.yml
docs/systemdesign/: module_reference.md
lib_detect_testenv/: lib_detect_testenv.py
notebooks/: Quickstart.ipynb
src/lib_detect_testenv/: __init__.py  __init__conf__.py  behaviors.py  cli.py  lib_detect_testenv.py  typed_click.py
tests/: conftest.py  test_cli.py  test_lib_detect_testenv.py  test_metadata.py  test_module_entry.py
tests/local_testscripts/: lib_bash_functions.sh
