[project]
name = "lib_detect_testenv"
version = "3.0.2"
description = "Detect test environment - pytest, doctest, unittest, or regular execution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rich-click>=1.9.8",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["testing", "pytest", "doctest", "unittest", "test-detection", "test-environment"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bitranox/lib_detect_testenv"
Repository = "https://github.com/bitranox/lib_detect_testenv.git"
Issues = "https://github.com/bitranox/lib_detect_testenv/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2,<9; python_version<'3.10'",
  "pytest>=9.1.0; python_version>='3.10'",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.17",
  "pyright[nodejs]>=1.1.410",
  "bandit>=1.8.6,<1.9; python_version<'3.10'",
  "bandit>=1.9.4; python_version>='3.10'",
  "build>=1.5.0",
  "twine>=6.2.0",
  "codecov-cli>=11.2.8",
  "pip-audit>=2.10.1",
  "textual>=8.2.7",
  "import-linter>=2.5.2,<2.6; python_version<'3.10'",
  "import-linter>=2.11; python_version>='3.10'",
  "setuptools>=82.0.1",
  "rtoml>=0.13.0",
]

[project.scripts]
lib_detect_testenv = "lib_detect_testenv.cli:main"

[build-system]
requires = ["hatchling>=1.27.0,<1.32"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/lib_detect_testenv"]
include = ["src/lib_detect_testenv/py.typed"]

[tool.ruff]
line-length = 160
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
# tomli (the tomllib backport used on Python < 3.11) ships no type info, so
# tomli.load/loads resolve as unknown under pyright on 3.10. Kept repo-wide
# because the affected calls live in tests. (rich-click decorators are handled
# by the typed_click facade, not this rule.)
reportUnknownMemberType = false
# Allow unknown types from tomllib/tomli conditional imports (Python 3.10 compatibility)
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/lib_detect_testenv"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 85
show_missing = true

[tool.clean]
# Patterns to remove when running `make clean`
patterns = [
  "**/__pycache__",
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"


[tool.importlinter]
root_package = "lib_detect_testenv"

[[tool.importlinter.contracts]]
name = "CLI depends on detection library and behaviors"
type = "layers"
layers = [
  "lib_detect_testenv.cli",
  "lib_detect_testenv.lib_detect_testenv",
  "lib_detect_testenv.behaviors",
]

[tool.pip-audit]
# Known vulnerabilities to ignore (unfixable or accepted risk)
# GHSA-4xh5-x5gv-qwph: py library ReDoS (no fix available, low risk)
# PYSEC-2022-42969: same as above (alias)
ignore-vulns = ["GHSA-4xh5-x5gv-qwph", "PYSEC-2022-42969", "CVE-2026-25990", "CVE-2026-26007", "CVE-2026-4539", "CVE-2026-25645"]

[tool.bashate]
max-line-length = 120
ignores = ["E003"]
